styling for the shopping list items

--- a/index.css
+++ b/index.css
@@ -38,3 +38,22 @@ button{
     text-align: center;
     font-family:'Rubik', sans-serif;
 }
+
+ul{
+    list-style-type: none;
+    padding: 0;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 8px;
+}
+
+ul li{
+    background-color: #FFFDF8;
+    padding: 10px 20px;
+    border-radius: 8px;
+    flex-grow: 1;
+    text-align: center;
+    color: brown;
+    font-size: 18px;
+    box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.2)
+}
