--- a/index.css
+++ b/index.css
@@ -53,7 +53,7 @@ ul li{
     border-radius: 8px;
     flex-grow: 1;
     text-align: center;
-    color: brown;
-    font-size: 18px;
+    color: #5c2630;
+    font-size: 19px;
     box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.2)
 }
