--- a/index.css
+++ b/index.css
@@ -57,3 +57,12 @@ ul li{
     font-size: 19px;
     box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.2)
 }
+
+button:hover{
+    cursor: pointer;
+    background-color:#432000;
+}
+ul li:hover{
+    cursor: pointer;
+    opacity: 50%;
+}
