--- a/index.css
+++ b/index.css
@@ -2,7 +2,7 @@ html, body{
     margin: 0;
     padding: 0;
     font-family:'Rubik', sans-serif;
-    background-color: #EEF0F4;
+    background-color: #a2d2ff;
     user-select: none;
 }
 .container{
@@ -18,8 +18,8 @@ img{
 }
 
 input{
-    color: #432000;
-    background-color: #DCE1EB;
+    color: #b17b00;
+    background-color: whitesmoke;
     border: 0;
     padding: 15px;
     border-radius: 8px;
@@ -31,7 +31,7 @@ input{
 
 button{
     color: #FDFDFD;
-    background-color: #AC485A;
+    background-color: #0036B1;
     border: 0;
     padding: 15px;
     border-radius: 8px;
@@ -49,19 +49,19 @@ ul{
 }
 
 ul li{
-    background-color: #FFFDF8;
+    background-color: whitesmoke;
     padding: 10px 20px;
     border-radius: 8px;
     flex-grow: 1;
     text-align: center;
-    color: #5c2630;
+    color: #b17b00;
     font-size: 19px;
     box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.2)
 }
 
 button:hover{
     cursor: pointer;
-    background-color:#432000;
+    background-color:#00339A;
 }
 ul li:hover{
     cursor: pointer;
