--- a/index.css
+++ b/index.css
@@ -1,7 +1,7 @@
 html, body{
     margin: 0;
     padding: 0;
-    font-family:'Rubik', sans-serif;
+    font-family:'DM Sans', sans-serif;
     background-color: #a2d2ff;
     user-select: none;
 }
@@ -25,7 +25,7 @@ input{
     border-radius: 8px;
     font-size: 20px;
     text-align: center;
-    font-family:'Rubik', sans-serif;
+    font-family:'DM Sans', sans-serif;
     margin: 10px 0;
 }
 
@@ -37,7 +37,7 @@ button{
     border-radius: 8px;
     font-size: 20px;
     text-align: center;
-    font-family:'Rubik', sans-serif;
+    font-family:'DM Sans', sans-serif;
 }
 
 ul{
